@@ -191,8 +191,8 @@ class Groups_Access_Meta_Boxes_Legacy {
 			$post_type_object = get_post_type_object( $post_type );
 			$labels = isset( $post_type_object->labels ) ? $post_type_object->labels : null;
 			if ( $labels !== null ) {
-				if ( isset( $labels->singular_name ) )  {
-					$post_singular_name = __( $labels->singular_name );
+				if ( isset( $labels->singular_name ) ) {
+					$post_singular_name = $labels->singular_name; // this is already translated
 				}
 			}
 		}
@@ -227,6 +227,7 @@ class Groups_Access_Meta_Boxes_Legacy {
 						}
 						if ( count( $group_names ) > 0 ) {
 							$label_title = sprintf(
+								/* translators: 1: group 2: post type name */
 								_n(
 									'Members of the %1$s group can access this %2$s through this capability.',
 									'Members of the %1$s groups can access this %2$s through this capability.',
@@ -267,14 +268,15 @@ class Groups_Access_Meta_Boxes_Legacy {
 			$output .= '</div>';
 
 			$output .= '<p class="description">';
-			$output .= sprintf( __( "Only groups or users that have one of the selected capabilities are allowed to read this %s.", 'groups' ), $post_singular_name );
+			/* translators: group name */
+			$output .= sprintf( esc_html__( "Only groups or users that have one of the selected capabilities are allowed to read this %s.", 'groups' ), esc_html( $post_singular_name ) );
 			$output .= '</p>';
 
 			$output .= '<p class="description">';
 			$output .= sprintf( '<label title="%s">', __( 'Click to toggle the display of groups that grant the capabilities.', 'groups' ) );
 			$output .= sprintf( '<input id="access-show-groups" type="checkbox" name="%s" %s />', esc_attr( self::SHOW_GROUPS ), $show_groups ? ' checked="checked" ' : '' );
 			$output .= ' ';
-			$output .= __( 'Show groups', 'groups' );
+			$output .= esc_html__( 'Show groups', 'groups' );
 			$output .= '</label>';
 			$output .= '</p>';
 			$output .= '<script type="text/javascript">';
@@ -287,7 +289,7 @@ class Groups_Access_Meta_Boxes_Legacy {
 			$output .= '</script>';
 		} else {
 			$output .= '<p class="description">';
-			$output .= sprintf( __( 'You cannot set any access restrictions.', 'groups' ), $post_singular_name );
+			$output .= esc_html__( 'You cannot set any access restrictions.', 'groups' );
 			$style = 'cursor:help;vertical-align:middle;';
 			if ( current_user_can( GROUPS_ADMINISTER_OPTIONS ) ) {
 				$style = 'cursor:pointer;vertical-align:middle;';
@@ -559,6 +561,7 @@ class Groups_Access_Meta_Boxes_Legacy {
 							}
 							if ( count( $group_names ) > 0 ) {
 								$label_title = sprintf(
+									/* translators: 1: group 2: post type name */
 									_n(
 										'Members of the %1$s group can access this %2$s through this capability.',
 										'Members of the %1$s groups can access this %2$s through this capability.',
@@ -590,7 +593,8 @@ class Groups_Access_Meta_Boxes_Legacy {
 				$output .= '</div>';
 
 				$output .= '<p class="description">';
-				$output .= sprintf( __( "Only groups or users that have one of the selected capabilities are allowed to read this %s.", 'groups' ), $post_singular_name );
+				/* translators: group name */
+				$output .= sprintf( esc_html__( "Only groups or users that have one of the selected capabilities are allowed to read this %s.", 'groups' ), esc_html( $post_singular_name ) );
 				$output .= '</p>';
 
 				$form_fields['groups_access'] = array(
